src/objects/Case_State_Transition_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Calculation_Type__c</fullName>
        <defaultValue>&apos;None&apos;</defaultValue>
        <inlineHelpText>None, TPA, TCP, Both, Mediator</inlineHelpText>
        <label>Calculation Type</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_State__c</fullName>
        <label>From State</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_From_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include From Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Mediator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Mediator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>To_State__c</fullName>
        <label>To State</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Case State Transition Setting</label>
    <pluralLabel>Case State Transition Settings</pluralLabel>
</CustomObject>